Fixed weird search icon alignment

--- a/source/stylesheets/components/_search.scss
+++ b/source/stylesheets/components/_search.scss
@@ -106,7 +106,7 @@
 
 .search-box-icon {
   position: absolute;
-  left: 1px;
+  left: 10px;
   top: 18px;
   color: $navbar-default-link-color;
 }
